<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LUFELF</string>
    <string name="menu_settings">Settings</string>

    <!-- Activity Strings -->

    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register Account</string>
    <string name="title_activity_guest">Guest Account</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_events">Events</string>
    <string name="title_activity_friends">Friends</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_account">Account</string>
    <string name="title_activity_popular_locations">Locations</string>
    <string name="title_activity_bus_timetable">Bus Timetable</string>

    <!-- Label Strings -->


    <!-- Login Screen -->

    <string name="username_label">Username/Email</string>
    <string name="password_label">Password</string>

    <!-- Registration Screen -->

    <string name="name_label">Name</string>
    <string name="libNo_label">Library Card No.</string>
    <string name="confPass_label">Confirm Password</string>
    <string name="dob_label">D.O.B</string>

    <!-- Button Strings -->


    <!-- Login Screen -->

    <string name="login_button">Login</string>
    <string name="register_button">Register</string>
    <string name="guest_button">Guest</string>

    <!-- Checkbox -->
    <string name="share_location">Share Location</string>

    <!-- Main Screen -->

    <string name="map_button">Map</string>
    <string name="events_button">Events</string>
    <string name="popularLocations_button">Popular Locations</string>
    <string name="busTimetable_button">Bus Timetable</string>
    <string name="friends_button">Friends</string>
    <string name="accounts_button">Accounts</string>
    <string name="settings_button">Settings</string>

    <!-- Register Screen -->
    <string name="logout_button">Logout</string>
    <string name="events_no_items">No Events To Display</string>
    <string name="delete_user">Delete Account</string>
    <string name="add_friend">Add Friend</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_add_friends">Add Friend</string>
    <string name="add_friends_username">Friends Username</string>
    <string name="title_activity_friend_requests">Friend Requests</string>
    <string name="accept_friend_request">Accept</string>
    <string name="decline_friend_request">Decline</string>
    <string name="title_activity_messages">Messages</string>

    <color name="invalid_color">#FF9494</color>
    <color name="background_colour">#FFF3F3F3</color>

    <string name="title_activity_sent_messages">SentMessagesActivity</string>

</resources>